--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+bcrypt==3.2.0
+cffi==1.14.5
+click==7.1.2
 Flask==1.0.2
-setuptools==41.2.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+pycparser==2.20
+six==1.15.0
 SQLAlchemy==1.3.23
-sqlalchemy-utils==0.33.6
+SQLAlchemy-Utils==0.33.6
+Werkzeug==1.0.1
